放入环境变量